--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
 /* ini css */
+/*css untuk header*/
+header{
+    text-align: center;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 0;
+    margin-bottom: 20px;
+}
+ 
+/*css untuk body*/
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -6,10 +16,6 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-}
-
-.main-title{
-    text-align: center;
 }
 
 main{
@@ -20,18 +26,15 @@ main{
     margin: 0 10px;
 }
 
-header{
+.main-title{
     text-align: center;
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 0;
-    margin-bottom: 20px;
 }
 
 h1, h2, h3 {
     margin: 0 0 10px 0;
     color: #333;
 }
+
 
 .section2{
     text-align: center;
@@ -103,6 +106,7 @@ aside{
     padding: 30px;
 }
 
+/*css untuk footer*/
 footer{
     text-align: center;
     background-color: #4CAF50;
